# Taskete

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blacklist.txt
docs/internal/: LockfreeRingbuffer.md  PoolManager.md  SharedMemory.md
include/taskete/: handle.hpp  memory_resource.hpp  pool_options.hpp
source/taskete/: execution_payload.cpp  execution_payload.hpp  lock_helpers.hpp  lockfree_ringbuffer.hpp  macro_utils.hpp  memory_resource.cpp  node.cpp  node.hpp  pool_helper.hpp  pool_manager.hpp  shared_memory.cpp  shared_memory.hpp
test/: test_execution_payload.cpp  test_pool_manager.cpp  test_ringbuffer.cpp  test_shared_memory.cpp
